fix: now cards are positionet correctly and don't overlap

--- a/table-styles.css
+++ b/table-styles.css
@@ -7,55 +7,45 @@
 	background-color: #fff;
 	display: grid;
 	grid-template-columns: 1fr 3fr 1fr;
-	padding: 1rem;
+	padding: 2rem;
 }
 
 .left-container {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: repeat(6, 1fr);
-	grid-template-areas: 
-	" . card"
-	" . card"
-	" deck card"
-	" . card"
-	" . card"
-	" . card"
-	;
 	gap: 0.5rem;
 }
 
 .card {
 	background-color: blueviolet;
 	border: 0.5rem solid black;
-	grid-area: card;
+}
+
+.left-container .card {
+	grid-column: 2;
 }
 
 .deck {
 	background-color: blue;
 	border: 0.5rem solid black;
-	grid-area: deck;
 }
 
 .right-container {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: repeat(6, 1fr);
-	grid-template-areas: 
-	" card . "
-	" card . "
-	" card . "
-	" card deck "
-	" card . "
-	" card . "
-	;
 	gap: 0.5rem;
+}
+
+.right-container .card {
+	grid-column: 1;
 }
 
 .center-container {
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: 1fr 2fr 1.5fr 2fr 1fr;
+	grid-template-rows: 1fr 5fr 1.5fr 5fr 1fr;
 	grid-template-areas: 
 	"."
 	"card-zone-1"
@@ -71,25 +61,18 @@
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
 	grid-template-rows: 1fr 1fr;
-	grid-template-areas: 
-	"card-slot card-slot card-slot card-slot card-slot"
-	"card-slot card-slot card-slot card-slot card-slot"
-	;
+	gap: 1rem;
 }
 
 .card-zone-2 {
 	grid-area: card-zone-2;
-	background-color: red;
+	background-color: rgb(255, 106, 106);
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
 	grid-template-rows: 1fr 1fr;
-	grid-template-areas: 
-	"card-slot card-slot card-slot card-slot card-slot"
-	"card-slot card-slot card-slot card-slot card-slot"
-	;
+	gap: 1rem;
 }
 
 .card-slot {
-	grid-area: card-slot;
 	border: 0.5px solid black;
 }
